# Pythonproj_maddy17

./: License  README(Instruction manual).md  README.RST  README.md  setup.cfg  setup.py  src folder
Pythonproj_maddy17/: LICENSE  Pythonproj_maddy17.toml  README 2.md  setup.cfg  setup.py
Pythonproj_maddy17/src/Pythonproj_maddy17/: __init__.py
Pythonproj_maddy17/src/Pythonproj_maddy17.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
