[metadata]

name = Pythonproj_maddy17
version = 0.1.0
author = Maathavan Manimaran
author_email = maathavan17@gmail.com
description = A hello world package template
long_description = file: README 2.md
long_description_content_type = text/markdown

classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires = 
   setuptools
